# libnamumark

./: CMakeLists.txt  README.md  SECURITY.md
.github/workflows/: c-cpp.yml  codeql.yml  flawfinder.yml
src/: ast.c  ast.h  library.h  parser.c  parser.h  stack.c  stack.h
test/: CMakeLists.txt
test/src/: parser_test.cpp
